# zmk

./: CMakeLists.txt  Kconfig  run-test.sh  west.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  clang-format-lint.yml  test.yml
app/: CMakeLists.txt
app/boards/shields/rekdactyl/: Kconfig.defconfig  Kconfig.shield  rekdactyl.dtsi  rekdactyl.keymap  rekdactyl_left.overlay  rekdactyl_right.overlay
app/boards/shields/rekdactyl2/: Kconfig.defconfig  Kconfig.shield  rekdactyl2.dtsi  rekdactyl2.keymap  rekdactyl2_left.overlay  rekdactyl2_right.overlay
app/drivers/kscan/: kscan_gpio_direct.c
app/include/dt-bindings/zmk/: keys.h
app/include/zmk/: hid.h
app/include/zmk/events/: keycode-state-changed.h
app/src/: battery.c  ble.c  display.c  endpoints.c  ext_power_generic.c  hid.c  hid_listener.c  rgb_underglow.c
app/src/behaviors/: behavior_hold_tap.c  behavior_sticky_key.c
app/tests/keypress/kp-press-release/: keycode_events.snapshot
app/tests/momentary-layer/1-normal/: keycode_events.snapshot
boards/arm/dz60rgb/: dz60rgb_rev1.dts
boards/arm/planck/: planck_rev6.dts
boards/shields/boardsource3x4/: boardsource3x4.overlay
boards/shields/clueboard_california/: clueboard_california.overlay
boards/shields/corne/: corne_left.overlay  corne_right.overlay
boards/shields/cradio/: cradio_left.overlay  cradio_right.overlay
boards/shields/iris/: iris_left.overlay  iris_right.overlay
boards/shields/jian/: jian_left.overlay  jian_right.overlay
boards/shields/jorne/: jorne_left.overlay  jorne_right.overlay
boards/shields/kyria/: kyria_left.overlay  kyria_right.overlay
boards/shields/lily58/: lily58_left.overlay  lily58_right.overlay
boards/shields/m60/: m60.overlay
boards/shields/microdox/: microdox_left.overlay  microdox_right.overlay
boards/shields/nibble/: nibble.overlay
boards/shields/qaz/: qaz.overlay
boards/shields/quefrency/: quefrency_left.overlay  quefrency_right.overlay
boards/shields/reviung41/: reviung41.overlay
boards/shields/romac/: romac.overlay
boards/shields/romac_plus/: romac_plus.dtsi  romac_plus.overlay
boards/shields/settings_reset/: settings_reset.overlay
boards/shields/sofle/: sofle_left.overlay  sofle_right.overlay
boards/shields/splitreus62/: splitreus62_left.overlay  splitreus62_right.overlay
boards/shields/tg4x/: tg4x.overlay
boards/shields/zmk_module/: zmk_module.overlay
cmake/: zmk-config.cmake
docs/: docusaurus.config.js  sidebars.js
docs/docs/: troubleshooting.md
docs/docs/behavior/: key-press.md
docs/docs/development/setup/: native.md
docs/src/data/: hid.js
drivers/sensor/ec11/: ec11_trigger.c
include/zmk/: ble.h  endpoints.h  zmk.h
scripts/west_commands/: test.py
src/: ble.c  ext_power_generic.c  zmk.c
tests/: CMakeLists.txt  main.c
