cmake_minimum_required(VERSION 3.13.1)

project(zmk)

zephyr_linker_sources(RODATA include/linker/zmk-events.ld)

zephyr_include_directories(include)

zephyr_library()
zephyr_library_sources_ifdef(CONFIG_ZMK_SLEEP app PRIVATE src/power.c)
zephyr_library_sources(app PRIVATE src/kscan.c)
zephyr_library_sources(app PRIVATE src/matrix_transform.c)
zephyr_library_sources(app PRIVATE src/hid.c)
zephyr_library_sources(app PRIVATE src/sensors.c)
zephyr_library_sources(app PRIVATE src/event_manager.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_EXT_POWER app PRIVATE src/ext_power_generic.c)
zephyr_library_sources(app PRIVATE src/events/position_state_changed.c)
zephyr_library_sources(app PRIVATE src/events/layer_state_changed.c)
zephyr_library_sources(app PRIVATE src/events/keycode_state_changed.c)
zephyr_library_sources(app PRIVATE src/events/modifiers_state_changed.c)
zephyr_library_sources(app PRIVATE src/events/sensor_event.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/events/ble_active_profile_changed.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/events/battery_state_changed.c)
zephyr_library_sources_ifdef(CONFIG_USB app PRIVATE src/events/usb_conn_state_changed.c)
if (NOT CONFIG_ZMK_SPLIT_BLE_ROLE_PERIPHERAL)
  zephyr_library_sources(src/behaviors/behavior_key_press.c)
  zephyr_library_sources(src/behaviors/behavior_reset.c)
  zephyr_library_sources(src/behaviors/behavior_hold_tap.c)
  zephyr_library_sources(src/behaviors/behavior_sticky_key.c)
  zephyr_library_sources(src/behaviors/behavior_momentary_layer.c)
  zephyr_library_sources(src/behaviors/behavior_outputs.c)
  zephyr_library_sources(src/behaviors/behavior_toggle_layer.c)
  zephyr_library_sources(src/behaviors/behavior_transparent.c)
  zephyr_library_sources(src/behaviors/behavior_none.c)
  zephyr_library_sources(src/behaviors/behavior_sensor_rotate_key_press.c)
  zephyr_library_sources_ifdef(CONFIG_ZMK_EXT_POWER src/behaviors/behavior_ext_power.c)
  zephyr_library_sources(src/keymap.c)
endif()
zephyr_library_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW app PRIVATE src/behaviors/behavior_rgb_underglow.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/behaviors/behavior_bt.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/ble.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/battery.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_SPLIT_BLE_ROLE_PERIPHERAL app PRIVATE src/split_listener.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_SPLIT_BLE_ROLE_PERIPHERAL app PRIVATE src/split/bluetooth/service.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_SPLIT_BLE_ROLE_CENTRAL app PRIVATE src/split/bluetooth/central.c)
zephyr_library_sources_ifdef(CONFIG_USB app PRIVATE src/usb.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_BLE app PRIVATE src/hog.c)
zephyr_library_sources_ifdef(CONFIG_ZMK_RGB_UNDERGLOW app PRIVATE src/rgb_underglow.c)
zephyr_library_sources(app PRIVATE src/endpoints.c)
zephyr_library_sources(app PRIVATE src/hid_listener.c)
zephyr_library_sources_ifdef(CONFIG_SETTINGS app PRIVATE src/settings.c)
zephyr_library_sources(src/zmk.c)

add_subdirectory(src/display/)

zephyr_cc_option(-Wfatal-errors)
